- SF Patch #1624323 for SF feature request #1549297 Refinement of enable suggest feature
- Fix for SF Bug #1653151 Checker file shows filter-media (just a typo in header)
- SF Patch #1676370 Bug #1648070 Statistics does not use navbar="admin"
- Fix for SF Bug #1690573 dspace-admin, edit item trailing white spaces

(Stuart Lewis)
- SF Patch #1670110 for SF Bug #1670106 Onebox and textarea fail when visibility set to workflow
- SF Patch #1628889 Improve file size descriptions in ItemTag

(Monika Mevenkamp)
- SF Patch #1654469 stat scripts always return exit code 1

(K. Nakagami)
- SF Patch #1591969 for SF bug #1583372 DCDate.toString returns invalid string
- SF Patch #1621889 for SF Bug #1606789 When collection is deleted, mapped item remains in community

(James Rutherford)
- SF Patch #1694943 for SF feature request #1691277 Importing: Workaround for ext3 subdirectory limitation
- SF Patch #1695702 Update SubmitServlet to use default.language instead of "en" for SF bug 1636792 default.language not applied to new submissions
- SF Patch #1699903 for SF Bug #1695692 make-release-package still uses CVS commands

(Graham Triggs)
- SF Patch #1688523 Bug fix - OAI harvest and Oracle
- SF Patch #1660752 Workaround Numeric/Integer handling in Oracle
- SF Patch #1665400 Oracle schema changes for CLOB columns
- SF Patch #1655583 Avoid index lock with filter-media

1.4.1 final
===========
(Tim Donohue)
- SF Patch #1609663 Include Windows CLASSPATH in dsrun.bat

(Claudia Juergen)
- SF Patch #1606703 for SF bug #1606435 Workflow text out of context

(Mark Diggory)
- SF Patch #1609468 Move w3c valid xhtml boiler image into local repository
- SF Patch #1605771 Remove uncessary Log4j Configuration in CheckerCommand
 
1.4.1 beta 2
============
(Ed Yu)
- SF Bug #1605635 NPE in Utils.java

(K. Nakagami)
- SF bug #1597504 Search result page shows shortened query string

(Scott Phillips)
- Manakin eperson.patch adds API methods for searching epeople & groups.

(Andrea Bollini)